--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 .navbar {
-    background-color: #ff5e5b;
     font-size: 2.5vh;
+    background-color: #2d3032;
+    font-family: 'Montserrat';
+    font-weight: 400;
 }
 
 .navbar-brand, .nav-link {
@@ -8,7 +10,7 @@
 }
 
 .navbar-brand:hover, .nav-link:hover {
-    color: #70d0c6;
+    color: #9615db;
 }
 
 .fa-bars {
@@ -16,16 +18,79 @@
 }
 
 .fa-bars:hover {
-    color: #70d0c6;
+    color: #9615db;
 }
 
 .jumbotron {
-    background-color: #70d0c6;
+    background:url(images/hero.jpg) center no-repeat;
+    background-size: cover;
+    background-color: #2e3047;
     color: white;
     text-align: center;
+    font-family: 'Big Shoulders Display';
+    font-weight: 100;
+    font-size: 4.5vh;
+    margin: 0;
+}
+
+.jumbotron header {
+    font-family: 'Montserrat';
+    font-weight: 200;
+    color: white;
+    font-size: 8vh;
+    text-transform: uppercase;
+}
+
+#hero {
+    box-shadow: inset 2000px 0 0 0 rgba(46, 48, 71, 0.8);
 }
 
 .btn {
-    background-color: #ff5e5b;
+    background-color: #9615db;
+    color: white;
+    font-family: 'Montserrat';
+    font-weight: 400;
+}
+
+.btn:hover {
+    background-color: transparent;
+    border: 1px solid #9615db;
+    color: #9615db;
+}
+
+hr {
+    /* border: 1px solid #9615db; */
+    background: #9615db;
+    background: -webkit-gradient(linear, 0 0, 100% 0, from(white), to(white), color-stop(50%, #9615db));
+    height: 1px;
+    width: 50%;
+    position: relative;
+    margin: 0px auto 35px auto;
+}
+
+.home-header {
+    font-family: 'Montserrat';
+    font-size: 12vh;
+    color: #2d3032;
+    text-transform: uppercase;
+    font-weight: 200;
+}
+
+.navbar-nav {
+    text-align: center;
+}
+
+.navbar-brand {
+    text-align: center;
+}
+
+#about {
+    color: #2d3032;
+    font-family: 'Big Shoulders Display';
+    font-size: 4.5vh;
+}
+
+#why-learn {
+    background: #2d3032;
     color: white;
 }
